2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2006-12-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::CtrlMouseWheel): Use Command on OS X for +/-
	bindings.  Update to v1.4

2006-10-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::MouseWheel): correctly substitute $w as we
	walk up the tree.
	Do not try to trigger MouseWheel when existing binding is found.

2006-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::MouseWheel): handle Shift-MouseWheel
	correctly as the possible incoming event

2006-09-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::MouseWheel): allow for widgets with their own
	special MouseWheel binding

2006-08-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::CtrlMouseWheel): account for negative (pixel)
	font sizes in control-mousewheel bindings.
	(style::as::MouseWheel): walk the widget path up to find the
	proper widget to scroll, i.e. for proper scrolling of canvas
	or text with embedded widgets.

2006-07-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::init_menu*): adjust menu style defaults to
	not cause flickering redraw due to bd mismatch.

2006-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::MouseWheel): support aqua variant %D value.
	(style::as::init_mousewheel): add Shift-MouseWheel (x) binding.

2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2005-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* as.tcl (style::as::init_misc): add "*TreeCtrl.useTheme 1",
	bump package version up

2005-05-18  Andreas Kupries <andreask@activestate.com>

	* as.tcl:
	* lobster.tcl: Added missing 'require Tk'.
