@@ -1,3 +1,9 @@
+2011-05-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* as.tcl (style::as::init_fonts), pkgIndex.tcl: update to v1.4.1.
+	Only add *Menu.font for x11, as Cocoa Tk responds to menu font
+	requests now, and it looks funny.
+
 2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
